--- a/index.html
+++ b/index.html
@@ -4,37 +4,81 @@
 <head>
   <meta charset="utf-8">
   <title>Welcome to my world :)</title>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;1,300&display=swap" rel="stylesheet">
+
+  <!-- Fontawesome -->
+  <script src="https://kit.fontawesome.com/8f7c4c8eb1.js" crossorigin="anonymous"></script>
+
+  <!-- My Style -->
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
 
 <body>
 
-  <header>
-    <img src="" alt="UX/UI Designer Portfolio" id="logo">
-    <button id="darkModeBtn" class="btn" onclick="darkMode();">Toggle Dark Mode</button>
-    <div id="siteName">
-      <h1>Mike Tinnirello</h1>
-    </div>
+  <header class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="">LOGO</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#solutions">Solutions</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#clients">Happy Clients</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contactme">Get in touch</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
   </header>
 
-  <nav id="mainMenu">
-    <ul id="mainMenuList">
-      <li>How can I help?</li>
-      <li>Happy Clients</li>
-      <li>Prototypes</li>
-      <li>Get in touch</li>
-    </ul>
-  </nav>
+  <div id="siteIntro" class="container">
+    <h2>Hi, I'm Mike.</h2>
+    <p>Meaningf<strong>u</strong>l e<strong>x</strong>periences <strong>design</strong> is my passion.</p>
+  </div>
+
+  <div class="homeSectioncontainer container">
+    <div class="row">
+      <div id="solutions" class="homeSection col-lg-3 col-md-6">
+        <p>Solutions</p>
+      </div>
+      <div id="clients" class="homeSection col-lg-3 col-md-6">
+        <p>Happy Clients</p>
+      </div>
+      <div id="portfolio" class="homeSection col-lg-3 col-md-6">
+        <p>Portfolio</p>
+      </div>
+      <div id="contactme" class="homeSection col-lg-3 col-md-6">
+        <p>Get in touch</p>
+      </div>
+    </div>
+  </div>
+
+
+    <footer>
+      <div id="copyright">
+        <p>© 2020 Mike Tinnirello</p>
+      </div>
+    </footer>
 
 </body>
-
-<footer>
-  <div id="copyright">
-    <p>© 2020 Mike Tinnirello</p>
-  </div>
-</footer>
-
 
 </html>
