--- a/index.html
+++ b/index.html
@@ -23,62 +23,7 @@
 </head>
 
 <body>
-
-  <header class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="">LOGO</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#solutions">Solutions</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#clients">Happy Clients</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contactme">Get in touch</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-  </header>
-
-  <div id="siteIntro" class="container">
-    <h2>Hi, I'm Mike.</h2>
-    <p>Meaningf<strong>u</strong>l e<strong>x</strong>periences <strong>design</strong> is my passion.</p>
-  </div>
-
-  <div class="homeSectioncontainer container">
-    <div class="row">
-      <div id="solutions" class="homeSection col-lg-3 col-md-6">
-        <p>Solutions</p>
-      </div>
-      <div id="clients" class="homeSection col-lg-3 col-md-6">
-        <p>Happy Clients</p>
-      </div>
-      <div id="portfolio" class="homeSection col-lg-3 col-md-6">
-        <p>Portfolio</p>
-      </div>
-      <div id="contactme" class="homeSection col-lg-3 col-md-6">
-        <p>Get in touch</p>
-      </div>
-    </div>
-  </div>
-
-
-    <footer>
-      <div id="copyright">
-        <p>© 2020 Mike Tinnirello</p>
-      </div>
-    </footer>
-
+<img src="/v3-01-01.png>
 </body>
 
 </html>
