--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 </head>
 
 <body>
-<img src="/v3-01-01.png" >
+<div class="imgContainer">
+  <img src="v3-01-01.png" >
+</div>
+
 </body>
 
 </html>
